add new divs in home page

--- a/src/component/nav/nav.scss
+++ b/src/component/nav/nav.scss
@@ -14,9 +14,9 @@ nav > ul {
 nav > ul > li {
     color: $text-primary;
     display: inline-block;
-    font-size: .8rem;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    font-size: 1rem;
+    padding-top: .9rem;
+    padding-bottom: .9rem;
     font-weight: bolder;
 }
 
@@ -27,10 +27,10 @@ nav > ul  {
 
 nav > ul > li > a {
     color: $text-primary;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    padding-left: .5rem;
-    padding-right: .5rem;
+    padding-top: .9rem;
+    padding-bottom: .9rem;
+    padding-left: .9rem;
+    padding-right: .9rem;
 }
 
 .active-item{
