I changed the css in home page

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -15,6 +15,12 @@ footer > ul {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    
+}
+
+footer > hr {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 footer > ul > li {
