change menu's css

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,12 +17,20 @@ h2 {
   padding: 2rem;
 }
 
+p {
+  line-height: 2rem;
+}
+
 .page {
   background-color:  #F8F8F8;
   margin-right: 3rem;
   margin-left: 3rem;
   margin-top: 0px;
 }
+
+
+
+
 
 
 
