--- a/src/component/nav/nav.scss
+++ b/src/component/nav/nav.scss
@@ -69,6 +69,7 @@ and (max-device-width : 767px) {
     .menu-mobile {
         display: flex;
         justify-content: space-between;
+        height: 3.5rem;
     }
 
     .menu-mobile-title {        
