--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,53 +1,44 @@
-@import "../styles/variables.scss";
+ 
+footer {
+    background-color: var(--secundary);
+    color: var(--text-secundary);
+    font-size: .8rem;
+    padding: 1rem;
+}
 
+footer > p {
+    text-align: center;
+}
 
-.cards {
+footer > ul {
+    list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    
 }
 
-.card {
-    flex: 1 1 10rem;
-    margin: .5rem;
-    border: 1px $text-secundary solid;
-    background-color: $text-primary;
+footer > hr {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
-.card-img {
-    width: 100%;
-    object-fit: cover;
+footer > ul > li {
+    flex: 1 1 30rem;
+    margin: .5rem; 
+    display: flex;
+    align-items: center;
 }
 
-.card-text {
-    color:#434547;
-}
-  
-.card-header {
-    background-color: #57AACE;
-}
-
-.card-group{
-    width: 70%;
+footer .footer-icons{
+    color: var(--primary);
+    background-color:  var(--secundary);
+    font-size: 2rem;
+     
 }
 
-.card-title-solid{
-    color: white;
-}
-
-.card-body {
+footer .footer-text {  
     padding-left: 1rem;
-    padding-right: 1rem;
 }
-
-.card-body-solid{
-    background-color: #0049A7;
-    background-color: #57AACE;
-}
-
-h3.card-text{
-    color: #434547;
-}
-
 
 
 
@@ -75,9 +66,7 @@ and (max-width : 320px) {
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) {
-    .card {
-        flex: 1 1 30rem;
-    }
+     
 }
 
 /* iPads (landscape) ----------- */
@@ -85,9 +74,7 @@ and (max-device-width : 1024px) {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : landscape) {
-    .card {
-        flex: 1 1 30rem;
-    }
+/* Styles */
 }
 
 /* iPads (portrait) ----------- */
@@ -95,17 +82,13 @@ and (orientation : landscape) {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
-    .card {
-        flex: 1 1 30rem;
-    }
+     
 }
 
 /* Desktops and laptops ----------- */
 @media only screen 
 and (min-width : 1224px) {
-    .card {
-        flex: 1 1 30rem;
-    }
+     
 }
 
 /* Large screens ----------- */
