--- a/src/components/Brand.astro
+++ b/src/components/Brand.astro
@@ -1,7 +1,7 @@
 <section class="flex flex-wrap justify-center items-center bg-[#fff] py-16 gap-16  text-one">
   <article class="">
     <img
-      src="/industriasmarysol/images/brand.png"
+      src="/images/brand.png"
       alt="Chelox Brand"
       title="Chelox Brand"
       class="size-48"
