--- a/src/components/Principles.astro
+++ b/src/components/Principles.astro
@@ -6,7 +6,7 @@
   >
     <section class="">
       <img
-        src="/industriasmarysol/images/environment.webp"
+        src="/images/environment.webp"
         alt="Cuidamos el medio ambiente"
         class="img rounded-full size-[90px] md:size-[250px] 
         border-one 
@@ -25,7 +25,7 @@
 
     <section>
       <img
-        src="/industriasmarysol/images/car.webp"
+        src="/images/car.webp"
         alt="Productos para limpieza y mantenimiento de vehiculos Industrias Mar y Sol"
         class="img rounded-full size-[90px] md:size-[250px] 
         border-one 
