--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -3,7 +3,7 @@
   >
     <p class="px-8">
       <img
-        src="/industriasmarysol/images/team.webp"
+        src="/images/team.webp"
         alt="Equipo Industrias Mar y Sol S.A."
         class="rounded-lg w-full"
         decoding="async"
