--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -24,19 +24,19 @@ import HeaderLink from "./HeaderLink.astro";
     <section class="text-text-bold flex flex-row items-center justify-between">
       <ul class="unset flex gap-4 [&>li]:p-0 justify-end">
         <li>
-          <HeaderLink href="/industriasmarysol" class="button text-ten">Inicio</HeaderLink>
+          <HeaderLink href="/" class="button text-ten">Inicio</HeaderLink>
         </li>
         <li>
-          <HeaderLink href="/industriasmarysol/about" class="button text-ten">Compañia</HeaderLink
+          <HeaderLink href="/about" class="button text-ten">Compañia</HeaderLink
           >
         </li>
         <li>
-          <HeaderLink href="/industriasmarysol/products" class="button text-ten"
+          <HeaderLink href="/products" class="button text-ten"
             >Productos</HeaderLink
           >
         </li>
         <li>
-          <HeaderLink href="/industriasmarysol/contact" class="button text-ten"
+          <HeaderLink href="/contact" class="button text-ten"
             >Contacto</HeaderLink
           >
         </li>
@@ -78,16 +78,16 @@ import HeaderLink from "./HeaderLink.astro";
         <ul
           class="unset flex flex-col font-semibold text-three gap-4 [&>li]:p-0 px-6"
         >
-          <li><HeaderLink href="/industriasmarysol" class="mobileLink">Inicio</HeaderLink></li>
+          <li><HeaderLink href="/" class="mobileLink">Inicio</HeaderLink></li>
           <li>
-            <HeaderLink href="/industriasmarysol/about" class="mobileLink">Compañia</HeaderLink>
+            <HeaderLink href="/about" class="mobileLink">Compañia</HeaderLink>
           </li>
           <li>
-            <HeaderLink href="/industriasmarysol/products" class="mobileLink"
+            <HeaderLink href="/products" class="mobileLink"
               >Productos</HeaderLink>
           </li>
           <li>
-            <HeaderLink href="/industriasmarysol/contact" class="mobileLink">Contacto</HeaderLink>
+            <HeaderLink href="/contact" class="mobileLink">Contacto</HeaderLink>
           </li>
         </ul>
       </div>
