--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="p-8">
         <img
-          src="/industriasmarysol/images/mision.jpg"
+          src="/images/mision.jpg"
           alt="Misión de Industrial Mar y Sol"
           title="Misión de Industrial Mar y Sol"
           class="rounded-xl"
@@ -33,7 +33,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="p-8">
         <img
-          src="/industriasmarysol/images/vision.jpg"
+          src="/images/vision.jpg"
           alt="Visión de Industrial Mar y Sol"
           title="Visión de Industrial Mar y Sol"
           class="rounded-xl"
