--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <ul class="grid grid-flow-row grid-cols-1 md:grid-cols-3 gap-10 mb-4">
       <li class="rounded shadow-md" title="Ácido saca-sarro Chelox">
         <img
-          src="/industriasmarysol/images/products/ACIDOS.jpg"
+          src="/images/products/ACIDOS.jpg"
           class="rounded-t-lg"
           alt="Ácido saca-sarro Chelox"
           decoding="async"
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Brillo silicona Chelox">
         <img
-          src="/industriasmarysol/images/products/BRILLOS.jpg"
+          src="/images/products/BRILLOS.jpg"
           class="rounded-t-lg"
           alt="Brillo silicona Chelox"
           decoding="async"
@@ -52,7 +52,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Cloro Chelox">
         <img
-          src="/industriasmarysol/images/products/CLORO.jpg"
+          src="/images/products/CLORO.jpg"
           class="rounded-t-lg"
           alt="Cloro Chelox"
           decoding="async"
@@ -72,7 +72,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Desifectante Chelox">
         <img
-          src="/industriasmarysol/images/products/DESINFECTANTE.jpg"
+          src="/images/products/DESINFECTANTE.jpg"
           class="rounded-t-lg"
           alt="Desifectante Chelox"
           decoding="async"
@@ -92,7 +92,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Detergente Chelox">
         <img
-          src="/industriasmarysol/images/products/DETERGENTE.jpg"
+          src="/images/products/DETERGENTE.jpg"
           class="rounded-t-lg"
           alt="Detergente Chelox"
           decoding="async"
@@ -113,7 +113,7 @@ import Layout from "../layouts/Layout.astro";
       <li class="rounded shadow-md" title="Gel desinfectante Chelox">
         <img
           class="rounded-t-lg"
-          src="/industriasmarysol/images/products/GELYJABON.jpg"
+          src="/images/products/GELYJABON.jpg"
           alt="Gel desinfectante Chelox"
           decoding="async"
           loading="lazy"
@@ -132,7 +132,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Sampoo y desengrasante Chelox">
         <img
-          src="/industriasmarysol/images/products/SHAMPOOYDESENGRASANTE.jpg"
+          src="/images/products/SHAMPOOYDESENGRASANTE.jpg"
           class="rounded-t-lg"
           alt="Sampoo y desengrasante Chelox"
           decoding="async"
@@ -152,7 +152,7 @@ import Layout from "../layouts/Layout.astro";
 
       <li class="rounded shadow-md" title="Suavizante Chelox">
         <img
-          src="/industriasmarysol/images/products/SUAVIZANTE.jpg"
+          src="/images/products/SUAVIZANTE.jpg"
           class="rounded-t-lg"
           alt="Suavizante Chelox"
           decoding="async"
