remove team section

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
             placeholder="Mensaje"></textarea>
 
           <div class="flex items-center justify-center">
-            <button type="submit" class="bg-seven rounded py-3 text-one w-48  font-semibold">
+            <button type="submit" class="bg-seven rounded py-3 text-one w-48  font-semibold" aria-label="Send">
               Enviar
             </button>
           </div>
