--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -44,7 +44,7 @@ import HeaderLink from "./HeaderLink.astro";
     </section>
   </nav>
   <nav class="md:hidden">
-    <button id="mobile-menu-open">
+    <button id="mobile-menu-open" aria-label="Open Menu">
       <i class="fa-solid fa-bars" aria-hidden="true" title="Open mobile menu"
       ></i>
       <svg
@@ -63,7 +63,7 @@ import HeaderLink from "./HeaderLink.astro";
       class="hide-menu fixed top-0 left-0 z-10 w-full h-full transition-transform bg-ten border-primary-blue"
     >
       <div class="w-[75%] h-full drop-shadow-2xl">
-        <button id="mobile-menu-close" class="px-6 h-[5rem] text-lg xml-[1px]">
+        <button id="mobile-menu-close" class="px-6 h-[5rem] text-lg xml-[1px]" aria-label="Close Menu">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
