--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -24,7 +24,7 @@
     />
     <div class="flex flex-col absolute bottom-9 right-16 items-end -z-2">
       <div class="flex items-center justify-center">
-        <div class="font-semibold text-2xl text-ten">(+593) 294 3683</div>
+        <div class="font-semibold text-2xl text-ten">(+593) 096 855 6501</div>
       </div>
       <div class="font-normal text-four">Santa Helena, Ecuador</div>
     </div>
