adding new catalog products

--- a/src/components/Brand.astro
+++ b/src/components/Brand.astro
@@ -7,8 +7,8 @@
       class="size-48"
     />
   </article>
-  <article class="bg-six w-full">
-    <p class="leading-loose p-16 ">
+  <article class="bg-ten w-full">
+    <p class="leading-loose p-8 md:p-16 ">
       Chelox es una marca registrada de productos de aseo para el hogar y
       vehículos, desarrollada y comercializada por Industrias Mar y Sol. Esta
       marca se distingue por su compromiso con la calidad, la eficacia y la
