--- a/src/components/Categories.astro
+++ b/src/components/Categories.astro
@@ -1,8 +1,8 @@
 <div class="my-6 md:my-16 m-2 md:px-12 grid grid-flow-row grid-cols-1 justify-center bg-categorias  bg-cover bg-center">
-  <div class="mb-8">
-    <h2 class="text-eight font-extrabold text-center text-xl">Línea Institucional</h2>
+  <div class="mb-10">
+    <h2 class="text-eight font-extrabold text-center text-4xl">Línea Institucional</h2>
 
-    <ul class="p-4 mt-2 md:mt-4 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
+    <ul class="p-4 mt-2 md:mt-6 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
       <li class="p-1 text-sm md:text-base ">Ácido Nítrico</li>
       <li class="p-1 text-sm md:text-base">Ácido Saca Sarro</li>
       <li class="p-1 text-sm md:text-base">Cloro Gel</li>
@@ -18,10 +18,10 @@
     </ul>
   </div>
 
-  <div class="mb-8">
-    <h2 class="text-eight font-extrabold text-center text-xl">Línea Hogar</h2>
+  <div class="mb-10">
+    <h2 class="text-eight font-extrabold text-center text-4xl">Línea Hogar</h2>
 
-    <ul class="p-4 md:mt-4 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
+    <ul class="p-4 md:mt-6 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
       <li class="p-1 text-sm md:text-base">Cloro</li>
       <li class="p-1 text-sm md:text-base">Desinfectantes</li>
       <li class="p-1 text-sm md:text-base">Suavizantes</li>
@@ -36,9 +36,9 @@
   </div>
 
   <div class="mb-8">
-    <h2 class="text-eight font-extrabold text-center text-xl">Línea Automotriz</h2>
+    <h2 class="text-eight font-extrabold text-center text-4xl">Línea Automotriz</h2>
 
-    <ul class="p-4 md:mt-4 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
+    <ul class="p-4 md:mt-6 grid grid-flow-row grid-cols-2 md:grid-cols-3 text-ten">
       <li class="p-1 text-sm md:text-base">Shampoo para autos</li>
       <li class="p-1 text-sm md:text-base">Abrillantador de Paneles</li>
       <li class="p-1 text-sm md:text-base">Abrillantador de llanta</li>
