--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -22,7 +22,7 @@ import HeaderLink from "./HeaderLink.astro";
 <Fragment> 
   <nav class="hidden md:inline">
     <section class="text-text-bold flex flex-row items-center justify-between">
-      <ul class="unset flex gap-4 [&>li]:p-0 justify-end">
+      <ul class="unset flex gap-8 [&>li]:p-0 justify-end text-lg">
         <li>
           <HeaderLink href="/" class="button text-ten">Inicio</HeaderLink>
         </li>
