--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,12 +3,18 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Industrias Mar y Sol | Contacto">
-  <section class="page mt-36 px-4 md:px-16 pb-16">
-    <h2 class="font-bold text-3xl my-8 text-center text-eight">Contáctanos</h2>
+  <section class="page mt-32 px-4 md:px-16 pb-16">
+    <h2 class="font-bold text-5xl mb-12 text-center text-eight">Contáctanos</h2>
 
     <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 gap-6">
       <article>
-        <form class="flex flex-col gap-6">
+
+        <div class="font-semibold text-2xl text-eight">
+          
+          <p class="font-light">Línea telefónica</p>
+          <p>(+593) 096 855 6501</p></div>
+
+        <form class="flex flex-col gap-6 hidden">
           <input
             type="email"
             class="rounded-md border-2 border-four py-3 px-2 text-eight focus:text-eight"
