--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -3,13 +3,33 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Industrias Mar y Sol | Productos">
-  <section class="page mt-36 px-4 md:px-16 pb-16">
-    <h2 class="font-bold text-3xl my-8 text-center text-eight">Nuestros products</h2>
+  <section class="page mt-32 px-4 md:px-24 pb-16">
+    <h2 class="font-bold text-5xl mb-16 text-center text-eight">Nuestros productos</h2>
 
-    <ul class="grid grid-flow-row grid-cols-1 md:grid-cols-3 gap-10 mb-4">
+    <ul class="grid grid-flow-row grid-cols-1 md:grid-cols-3 gap-16 mb-4">
+
       <li class="rounded shadow-md" title="Ácido saca-sarro Chelox">
         <img
-          src="/images/products/ACIDOS.jpg"
+          src="/images/products/acido-nitrico-chelox.png"
+          class="rounded-t-lg "
+          alt="Ácido saca-sarro Chelox"
+          decoding="async"
+          loading="lazy"
+        />
+
+        <section class="p-4">
+          <h3 class="font-semibold">&Aacute;cido nítrico</h3>
+          <p class="font-light text-sm mb-2"> 
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+          </p>
+        </section>
+      </li>
+
+      <li class="rounded shadow-md" title="Ácido saca-sarro Chelox">
+        <img
+          src="/images/products/acido-sacasarro-chelox.png"
           class="rounded-t-lg"
           alt="Ácido saca-sarro Chelox"
           decoding="async"
@@ -18,41 +38,57 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">&Aacute;cido sacasarro</h3>
-          <p class="font-light">
-            With supporting text below as a natural lead-in to additional
-            content.
+          <p class="font-light text-sm mb-2"> 
           </p>
-          <p class="font-light">
-            <small class=""
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
-      <li class="rounded shadow-md" title="Brillo silicona Chelox">
+      <li class="rounded shadow-md" title="Alcohol antibacterial Chelox">
         <img
-          src="/images/products/BRILLOS.jpg"
+          src="/images/products/alcohol-antibacterial-chelox.png"
           class="rounded-t-lg"
-          alt="Brillo silicona Chelox"
+          alt="Alcohol antibacterial Chelox"
           decoding="async"
           loading="lazy"
         />
 
         <section class="p-4">
-          <h3 class="font-semibold">Brillo silicona</h3>
-
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <h3 class="font-semibold">Alcohol antibacterial</h3>
+          <p class="font-light text-sm mb-2"> 
+            Presentaciones: caneca, galón y litro, 500ml y sachet 280ml.
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
+      <li class="rounded shadow-md" title="Jabón de tocador Chelox">
+        <img
+          class="rounded-t-lg"
+          src="/images/products/jabon-chelox.png"
+          alt="Jabón de tocador Chelox"
+          decoding="async"
+          loading="lazy"
+        />
+
+        <section class="p-4">
+          <h3 class="font-semibold">Jabón de tocador</h3>
+          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+          </p>
+        </section>
+      </li>
+
+ 
+
       <li class="rounded shadow-md" title="Cloro Chelox">
         <img
-          src="/images/products/CLORO.jpg"
+          src="/images/products/cloro-chelox.png"
           class="rounded-t-lg"
           alt="Cloro Chelox"
           decoding="async"
@@ -61,18 +97,18 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Cloro</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <p class="font-light text-sm mb-2"> 
+            Presentaciones: galón, botella 1000ml, botella 500ml y sachet 280ml.
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
       <li class="rounded shadow-md" title="Desifectante Chelox">
         <img
-          src="/images/products/DESINFECTANTE.jpg"
+          src="/images/products/desifectante-chelox.png"
           class="rounded-t-lg"
           alt="Desifectante Chelox"
           decoding="async"
@@ -81,18 +117,21 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Desinfectante</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <p class="font-light text-sm "> 
+            Fragancias: lavanda, floral, manzana, canela, fresa, hawai, baby y eucalipto.
+          </p>
+          <p class="font-light text-sm mb-2"> 
+            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y sachet 250ml
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
-      <li class="rounded shadow-md" title="Detergente Chelox">
+      <li class="rounded shadow-md" title="Detergente líquido Chelox">
         <img
-          src="/images/products/DETERGENTE.jpg"
+          src="/images/products/detergente-liquido-chelox.png"
           class="rounded-t-lg"
           alt="Detergente Chelox"
           decoding="async"
@@ -100,39 +139,19 @@ import Layout from "../layouts/Layout.astro";
         />
 
         <section class="p-4">
-          <h3 class="font-semibold">Detergente</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <h3 class="font-semibold">Detergente líquido</h3>
+          <p class="font-light text-sm mb-2"> 
+            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y sachet 280ml
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
-      <li class="rounded shadow-md" title="Gel desinfectante Chelox">
+      <li class="rounded shadow-md" title="Sampoo para autos Chelox">
         <img
-          class="rounded-t-lg"
-          src="/images/products/GELYJABON.jpg"
-          alt="Gel desinfectante Chelox"
-          decoding="async"
-          loading="lazy"
-        />
-
-        <section class="p-4">
-          <h3 class="font-semibold">Gel y jabon</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
-          </p>
-        </section>
-      </li>
-
-      <li class="rounded shadow-md" title="Sampoo y desengrasante Chelox">
-        <img
-          src="/images/products/SHAMPOOYDESENGRASANTE.jpg"
+          src="/images/products/shampoo-autos-chelox.png"
           class="rounded-t-lg"
           alt="Sampoo y desengrasante Chelox"
           decoding="async"
@@ -140,19 +159,35 @@ import Layout from "../layouts/Layout.astro";
         />
 
         <section class="p-4">
-          <h3 class="font-semibold">Shampoo desengrasante Chelox</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <h3 class="font-semibold">Shampoo para autos Chelox</h3>
+          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+          </p>
+        </section>
+      </li>
+
+      <li class="rounded shadow-md" title="Brillo silicona Chelox">
+        <img
+          src="/images/products/brillo-silicona-chelox.png"
+          class="rounded-t-lg"
+          alt="Brillo silicona Chelox"
+          decoding="async"
+          loading="lazy"
+        />
+
+        <section class="p-4">
+          <h3 class="font-semibold">Brillo silicona Chelox</h3>
+          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </section>
       </li>
 
       <li class="rounded shadow-md" title="Suavizante Chelox">
         <img
-          src="/images/products/SUAVIZANTE.jpg"
+          src="/images/products/suavizante.png"
           class="rounded-t-lg"
           alt="Suavizante Chelox"
           decoding="async"
@@ -161,14 +196,34 @@ import Layout from "../layouts/Layout.astro";
 
         <div class="p-4">
           <h3 class="font-semibold">Suavizante</h3>
-          <p class="font-light"></p>
-          <p class="font-light">
-            <small class="text-muted"
-              >Comun&iacute;quese con nosotros para mayor informaci&oacute;n</small
-            >
+          <p class="font-light text-sm mb-2"> 
+             
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
           </p>
         </div>
       </li>
+
+      <li class="rounded shadow-md" title="Brillo llantas Chelox">
+        <img
+          src="/images/products/brillo-llantas-chelox.png"
+          class="rounded-t-lg"
+          alt="Brillo llantas Chelox"
+          decoding="async"
+          loading="lazy"
+        />
+
+        <div class="p-4">
+          <h3 class="font-semibold">Brillo llantas</h3>
+          <p class="font-light text-sm mb-2"> 
+          </p>
+          <p class="font-light text-xs text-two">
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+          </p>
+        </div>
+      </li>
+
     </ul>
   </section>
 </Layout>
