--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,17 +1,22 @@
 <main
-  class="grid grid-flow-row grid-cols-1 md:grid-cols-2 py-8 px-4 md:px-16 bg-three h-screen"
+  class="grid grid-flow-row grid-cols-1 md:grid-cols-2 py-8 px-4 md:px-16 h-screen "
 >
-  <section class="md:pr-12 flex flex-col justify-center align-bottom">
-    <div
-      
-    >
-      <span class="rounded-full bg-one py-3 text-sm inline px-4 text-six font-semibold">Industria Ecuatoriana</span>
+  <section class="md:pr-12 flex flex-col justify-center align-bottom  ">
+    <div class="hidden md:block">
+      <span
+        class="rounded-full bg-five py-2 text-sm inline px-4 text-one font-semibold"
+        >Ecuador</span
+      >
     </div>
-    <h1 class="font-bold text-4xl text-eight my-8 font-montserratbold">
-      Industrias Mar y Sol
+    <h1
+      class=" text-5xl md:text-6xl text-eight my-8 font-montserratblack"
+    >
+      INDUSTRIAS MAR Y SOL S.A.
     </h1>
     <p class="text-ten font-normal leading-8">
-      En Industrias Mar y Sol nos dedicamos a la producción y comercialización de una amplia gama de productos de limpieza para el hogar, la industria y vehículos bajo nuestra marca Chelox. 
+      En Industrias Mar y Sol nos dedicamos a la producción y comercialización
+      de una amplia gama de productos de limpieza para el hogar, la industria y
+      vehículos bajo nuestra marca Chelox.
     </p>
   </section>
   <section class="flex justify-center items-start md:items-center">
@@ -22,11 +27,11 @@
       decoding="async"
       loading="lazy"
     />
-    <div class="flex flex-col absolute bottom-9 right-16 items-end -z-2">
+    <div class="flex flex-col absolute bottom-4 md:bottom-9 right-16 items-end -z-2">
       <div class="flex items-center justify-center">
-        <div class="font-semibold text-2xl text-ten">(+593) 096 855 6501</div>
+        <div class="font-semibold text-2xl text-eight">(+593) 096 855 6501</div>
       </div>
-      <div class="font-normal text-four">Santa Helena, Ecuador</div>
+      <div class="font-normal text-ten">Santa Helena, Ecuador</div>
     </div>
   </section>
 </main>
