--- a/src/components/Principles.astro
+++ b/src/components/Principles.astro
@@ -1,5 +1,5 @@
-<section class="p-8 px-16 pb-8 md:p-8 gap-4 bg-one">
-  <h3 class="font-montserratbold text-3xl text-eight my-12 text-center">Principios</h3>
+<section class="p-8 md:px-16 pb-8 md:p-8 gap-4 bg-one">
+  <h3 class="font-montserratbold text-4xl text-eight my-12 text-center">Principios</h3>
 
   <article
     class="grid grid-flow-row grid-cols-1 md:grid-cols-1 gap-12 md:px-16 md:pb-8"
@@ -15,8 +15,8 @@
         loading="lazy"
       />
 
-      <h4 class="text-2xl font-montserratbold my-4 text-right text-ten">Naturaleza</h4>
-      <p class="font-light leading-8 bg-six text-one rounded-xl p-8">
+      <h4 class="text-3xl font-montserratbold my-4 text-right text-ten ">Naturaleza</h4>
+      <p class="font-light leading-8 bg-ten text-one rounded-xl p-8">
         Industrias Mar y Sol elabora sus productos usandos ingredientes biodegradables,
         envases reciclables y prácticas de fabricación sostenibles para
         minimizar el impacto ambiental de sus operaciones.
@@ -33,8 +33,8 @@
         decoding="async"
         loading="lazy"
       />
-      <h4 class="text-2xl font-montserratbold my-4 text-right text-ten ">Comunidad</h4>
-      <p class="font-light leading-8 bg-six text-one rounded-xl p-8">
+      <h4 class="text-3xl font-montserratbold my-4 text-right text-ten ">Comunidad</h4>
+      <p class="font-light leading-8 bg-ten text-one rounded-xl p-8">
         El compromiso de Industrias Mar y Sol con la comunidad se refleja en su esfuerzo por generar empleo, impulsar el desarrollo económico y mejorar la calidad de vida de los ciudadanos. Al crear oportunidades laborales, la empresa no solo contribuye al bienestar de las personas, sino que también fortalece el tejido social y económico de la región.
       </p>
     </section>
