--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -21,7 +21,7 @@
   </section>
   <section class="flex justify-center items-start md:items-center">
     <img
-      src="/images/home.jpg"
+      src="/images/home.webp"
       alt="Productos para la limpieza en el Hogar"
       class="rounded-xl shadow-lg"
       decoding="async"
